 * Tidy-up of Data Objects:
  - removed deprecated remove_all class-method
  - added get_dataset_id class method to return dataset id
  - shared super-class new, new_from_data, remove for most classes

2008-04-28 tdb
 * Removed store/retrieve methods from DataObj, just wrapper methods anyway
 * Call storage layer with filename rather than uri
 * Added "DataObj::SubObject" to add parent methods to sub-objects
 * Added "file" dataset to store file metadata
 * Example adaption of a Convert plugin for storage layer use
 * Added utility storage methods to DataObj
 * Added database update to DataObj::commit superclass

2008-04-29 cjg
 * Added "schema" option to epadmin
 * Added XML::tidy to schema exporter

2008-04-30 tdb
 * Output a short list of commands with no arguments to epadmin
 * Clean up the list object in epadmin schema

2008-05-02 tdb
 * Added Import plugin for ORE resource maps

2008-05-07 tdb
 * Export Subjects in the same format as plain text
 * Added admin tool to check the subject tree for orphaned elements or circular
    references

2008-05-09 tdb
 * OREResource tests for MIME::Types

2008-05-12 tdb
 * Changed ordervalues columns to LONGTEXT from TEXT, fixing #3369
 * Check current_user exists before accessing it in Subject plugin
 * UTF8 => utf-8 in email charset, fixing #3370

2008-05-12 dct05r
 * ORE Resource Map Export Plugin

2008-05-13 tdb
 * Removed deprecated methods: make_buffer, garbage_collect, dispose_buffer, from_buffer, install_table
 * Check tables exist before attempting to create them when creating dataset tables (allows update_database_structure to "fill in the gaps")

2008-05-15 tdb
 * Reduced background images to 1px wide, reducing file size

2008-05-16 tdb
 * Added "dblanguages" config option to control the database encoding

2008-05-16 cjg 
 * Fixed bug in toolbox which prevented searching sub-objects and linked items.

2008-05-16 cjg 
 * Added boxes plugin system for EPrint summary pages.